--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,18 +1,33 @@
 <head>
-    <!-- Latest compiled and minified CSS -->
+
 
     <!-- jQuery library -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+<script src="/js/jquery-1.11.0.min.js"></script>
+    <link rel="stylesheet" href="/css/jquery-ui.css">
+<script src="/js/jquery-ui.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/bootstrap-hover-dropdown.js"></script>
 
-    <!-- <link href="/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- styles -->
+    <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/animate.min.css" rel="stylesheet">
+    <link href="/css/owl.carousel.css" rel="stylesheet">
+    <link href="/css/owl.theme.css" rel="stylesheet">
+
+    <!-- theme stylesheet -->
+    <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+
+    <!-- your stylesheet with modifications -->
+    <link href="/css/custom.css" rel="stylesheet">
+
+      <link rel="shortcut icon" href="favicon.png">
 
     <!-- <link href="/css/bootstrap-theme.min.css" rel="stylesheet"> -->
     <link href="/css/modified.css" rel="stylesheet">
-    <!-- <script src="js/respond.min.js"></script> -->
-
+<script src="/js/respond.min.js"></script>
 </head>
 <!-- nav header -->
 <?php
@@ -332,12 +347,10 @@ _________________________________________________________ -->
 
 <!-- *** SCRIPTS TO INCLUDE ***
  _________________________________________________________ -->
-<!-- <script src="/js/jquery-1.11.0.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery.cookie.js"></script>
+ 
+<!--<script src="/js/jquery.cookie.js"></script>
 <script src="/js/waypoints.min.js"></script>
 <script src="/js/modernizr.js"></script>
-<script src="/js/bootstrap-hover-dropdown.js"></script>
+
 <script src="/js/owl.carousel.min.js"></script>
-<script src="/js/front.js"></script>
--->
+<script src="/js/front.js"></script>-->
