--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -56,7 +56,8 @@ echo $personKey;
                       <?php foreach ($this->slider_products as $slider_product) { ?>
                           <?php if($count == 0){ ?>
                               <div class="item">
-                                  <img src="<?= $slider_product['photo'] ?>" alt="" class="img-responsive">
+                                  <?php var_dump($slider_product['photo']); ?>
+                                  <img src="data:image/jpg;base64, <?= base64_encode($slider_product['photo']) ?>" alt="" class="img-responsive">
                               </div>
                           <?php } else{ ?>
                               <div class="item">
@@ -485,12 +486,10 @@ echo $personKey;
 
     <!-- *** SCRIPTS TO INCLUDE ***
  _________________________________________________________ -->
-    <script src="/js/jquery-1.11.0.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    
     <script src="/js/jquery.cookie.js"></script>
     <script src="/js/waypoints.min.js"></script>
     <script src="/js/modernizr.js"></script>
-    <script src="/js/bootstrap-hover-dropdown.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
     <script src="/js/front.js"></script>
 
