--- a/application/views/scripts/product/add.phtml
+++ b/application/views/scripts/product/add.phtml
@@ -1,27 +1,25 @@
+<head>
+    <title>Add new product</title>
+</head>
 <div class="container">
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h1><center>New Product</center></h1>
-  </div>
-  <div class="panel-body">
-	<?php
-// 	echo $this->jQuery()->enable()
-// 											->setUiVersion ( '1.8.7' )
-//         ->setVersion ( '1.4.4' );
-// //											->setUiVersion ( '1.12.1' )
-// //                ->setVersion ( '1.12.4' );;
-	echo $this->form;	
-	?>
-  </div>
-</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h1><center>New Product</center></h1>
+        </div>
+        <div class="panel-body">
+            <?php
+            echo $this->form;
+            ?>
+        </div>
+    </div>
 </div>
 <script type="text/javascript">
-  var currentDate = new Date();
-        $(".datepicker").datepicker({
-            showOn: 'focus',
-            changeMonth: true,
-            changeYear: true,
-            dateFormat: 'yy-mm-dd',
-            minDate: currentDate
-        });
+    var currentDate = new Date();
+    $(".datepicker").datepicker({
+        showOn: 'focus',
+        changeMonth: true,
+        changeYear: true,
+        dateFormat: 'yy-mm-dd',
+        minDate: currentDate
+    });
 </script>
