--- a/application/views/scripts/shopper/add.phtml
+++ b/application/views/scripts/shopper/add.phtml
@@ -1,3 +1,22 @@
+<head>
+    
+    <!-- styles -->
+    <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/animate.min.css" rel="stylesheet">
+    <link href="/css/owl.carousel.css" rel="stylesheet">
+    <link href="/css/owl.theme.css" rel="stylesheet">
+
+    <!-- theme stylesheet -->
+    <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+
+    <!-- your stylesheet with modifications -->
+    <link href="/css/custom.css" rel="stylesheet">
+
+    <script src="/js/respond.min.js"></script>
+
+    <link rel="shortcut icon" href="favicon.png">
+</head>
 <div class="container">
 <div class="panel panel-primary">
   <div class="panel-heading">
