--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <?php
+<?php 
     //$userType = new Zend_Session_Namespace('userType');
-<?php  //$userType = new Zend_Session_Namespace('userType');
+ //$userType = new Zend_Session_Namespace('userType');
 //$personKey= $userType->type ;
     $personKey = "adminID";
     ?>
@@ -355,19 +355,19 @@
                                             <!-- hager -->
                                             <table class="table">
                                                 <tr>
-             <th>number of users who purchased</th> 
+             <th>number of users who purchased</th>
              <th>The amount of money gained </th>
             </tr>
             <?php
            // $pro = new Application_Model_Product();
-          
+
                                                 echo "<tr>" .
                                                 "<td>" . $this->product["EnName"] . "</td>" .
             "<td>" . $this->product['no_purchase'] . "</td>" .
             "<td>" . $this->product['no_purchase']*$this->product['price'] . "</td>" ."</tr>";
-            
+
             ?>
-            
+
                                             </table>
 
 
