--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<?php 
+<?php
     //$userType = new Zend_Session_Namespace('userType');
  //$userType = new Zend_Session_Namespace('userType');
 //$personKey= $userType->type ;
@@ -30,7 +30,7 @@
         <link href="/css/animate.min.css" rel="stylesheet">
         <link href="/css/owl.carousel.css" rel="stylesheet">
         <link href="/css/owl.theme.css" rel="stylesheet">
-
+        <link rel="stylesheet" href="/css/style.css" />
         <!-- theme stylesheet -->
         <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
 
@@ -38,6 +38,7 @@
         <link href="/css/custom.css" rel="stylesheet">
 
         <script src="/js/respond.min.js"></script>
+        <script src="/js/star.js" ></script>
 
         <link rel="shortcut icon" href="favicon.png">
 
@@ -46,7 +47,27 @@
     </head>
 
     <body>
+      <!-- **************************************************************** -->
 
+      <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
+
+      <form id="ratingsForm">
+      	<div class="stars">
+      		<input type="radio" name="star" class="star-1" id="star-1" />
+      		<label class="star-1" for="star-1">1</label>
+      		<input type="radio" name="star" class="star-2" id="star-2" />
+      		<label class="star-2" for="star-2">2</label>
+      		<input type="radio" name="star" class="star-3" id="star-3" />
+      		<label class="star-3" for="star-3">3</label>
+      		<input type="radio" name="star" class="star-4" id="star-4" />
+      		<label class="star-4" for="star-4">4</label>
+      		<input type="radio" name="star" class="star-5" id="star-5" />
+      		<label class="star-5" for="star-5">5</label>
+      		<span></span>
+      	</div>
+
+      </form>
+      <!--  ****************************************************************************************-->
         <div id="all">
 
             <div id="content">
