--- a/application/views/scripts/shopper/login.phtml
+++ b/application/views/scripts/shopper/login.phtml
@@ -2,7 +2,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h1><center>
-    	Login Page
+    	Shopper Login Page
     </center></h1>
   </div>
   <div class="panel-body">
