--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -50,12 +50,12 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="/dist/img/user7-128x128.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
 
           <p>Admin</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <a href="#"><i class="fa fa-circle text-success"></i></a>
         </div>
       </div>
             
@@ -65,6 +65,11 @@
         <li class="active">
           <a href="#dashbord">
             <i class="fa fa-th"></i> <span>Dashbord</span>
+          </a>
+        </li>
+        <li class="">
+          <a href="/">
+            <i class="fa fa-th"></i> <span>Site Home</span>
           </a>
         </li>
         <li>
@@ -105,7 +110,7 @@
     <!-- Main content -->
     <section class="content">
 
-      <!-- Info boxes -->
+      <!-- 
       <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
@@ -115,11 +120,11 @@
               <span class="info-box-text">CPU Traffic</span>
               <span class="info-box-number">90<small>%</small></span>
             </div>
-            <!-- /.info-box-content -->
+            
           </div>
-          <!-- /.info-box -->
+          
         </div>
-        <!-- /.col -->
+        
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
             <span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>
@@ -128,13 +133,13 @@
               <span class="info-box-text">Likes</span>
               <span class="info-box-number">41,410</span>
             </div>
-            <!-- /.info-box-content -->
+            
           </div>
-          <!-- /.info-box -->
+          
         </div>
-        <!-- /.col -->
+        
 
-        <!-- fix for small devices only -->
+        
         <div class="clearfix visible-sm-block"></div>
 
         <div class="col-md-3 col-sm-6 col-xs-12">
@@ -145,11 +150,11 @@
               <span class="info-box-text">Sales</span>
               <span class="info-box-number">760</span>
             </div>
-            <!-- /.info-box-content -->
+            
           </div>
-          <!-- /.info-box -->
+
         </div>
-        <!-- /.col -->
+
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
             <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
@@ -158,17 +163,17 @@
               <span class="info-box-text">New Members</span>
               <span class="info-box-number">2,000</span>
             </div>
-            <!-- /.info-box-content -->
+            
           </div>
-          <!-- /.info-box -->
+
         </div>
-        <!-- /.col -->
+
       </div>
-      <!-- /.row -->
+       -->
         
 
           <!-- TABLE: LATEST ORDERS -->
-          <div class="box box-info">
+       <!--   <div class="box box-info">
             <div class="box-header with-border">
               <h3 class="box-title">Latest Orders</h3>
 
@@ -178,7 +183,7 @@
                 <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
               </div>
             </div>
-            <!-- /.box-header -->
+        
             <div class="box-body">
               <div class="table-responsive">
                 <table class="table no-margin">
@@ -250,12 +255,11 @@
                   </tbody>
                 </table>
               </div>
-              <!-- /.table-responsive -->
-            </div>
+             </div>
           
 
-          <!-- PRODUCT LIST -->
-          <div class="box box-primary">
+           PRODUCT LIST -->
+         <!--  <div class="box box-primary">
             <div class="box-header with-border">
               <h3 class="box-title">Recently Added Products</h3>
 
@@ -265,7 +269,7 @@
                 <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
               </div>
             </div>
-            <!-- /.box-header -->
+           
             <div class="box-body">
               <ul class="products-list product-list-in-box">
                 <li class="item">
@@ -280,7 +284,7 @@
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
+            
                 <li class="item">
                   <div class="product-img">
                     <img src="/dist/img/default-50x50.gif" alt="Product Image">
@@ -293,7 +297,7 @@
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
+           
                 <li class="item">
                   <div class="product-img">
                     <img src="/dist/img/default-50x50.gif" alt="Product Image">
@@ -305,7 +309,7 @@
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
+                
                 <li class="item">
                   <div class="product-img">
                     <img src="/dist/img/default-50x50.gif" alt="Product Image">
@@ -318,17 +322,17 @@
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
+            
               </ul>
             </div>
-            <!-- /.box-body -->
+           
             <div class="box-footer text-center">
               <a href="javascript:void(0)" class="uppercase">View All Products</a>
             </div>
-            <!-- /.box-footer -->
-          </div>
-          <!-- /.box -->
-        </div>
+            <
+          </div> 
+     
+        </div>-->
    <a name="categories"></a>
     <div class="box box-primary">
        <div class="box-header with-border">
@@ -446,11 +450,6 @@ echo"</tr>";
     </section>
     <!-- /.content -->
 
-  </div>
-  <!-- /.content-wrapper -->
-
-
-
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
 
@@ -460,7 +459,8 @@ echo"</tr>";
     reserved.
   </footer>
 
-  
+  </div>
+  <!-- /.content-wrapper --> 
   <!-- Add the sidebar's background. This div must be placed
        immediately after the control sidebar -->
   <div class="control-sidebar-bg"></div>
