product style modification

--- a/application/views/scripts/product/edit.phtml
+++ b/application/views/scripts/product/edit.phtml
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h1><center>New Product</center></h1>
+            <h1><center>edit Product</center></h1>
         </div>
         <div class="panel-body">
             <?php
