--- a/application/views/scripts/product/index.phtml
+++ b/application/views/scripts/product/index.phtml
@@ -1,4 +1,13 @@
-		<table class="table">
+	
+	<div class="container">
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h1><center>
+
+    </center></h1>
+  </div>
+  <div class="panel-body">
+  	<table class="table">
 			<tr>
 			 <th>ID</th>
 			  <th>En Name</th>  <th>Ar Name</th>  <th colspan="2">actions</th>
@@ -18,4 +27,7 @@
 			</table>
 			<p><a class='btn btn-warning' href="<?php echo $this->url(array('controller'=>'product',
 			'action'=>'add'));?>">Add new product</a></p>
-			
+		</div>
+		</div>
+		</div>
+		
