--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<?php
+    <?php
     //$userType = new Zend_Session_Namespace('userType');
- //$userType = new Zend_Session_Namespace('userType');
+    //$userType = new Zend_Session_Namespace('userType');
 //$personKey= $userType->type ;
     $personKey = "adminID";
     ?>
@@ -12,7 +12,7 @@
         <meta name="robots" content="all,follow">
         <meta name="googlebot" content="index,follow,snippet,archive">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Obaju e-commerce template">
+        <meta name="description" content="Amazend">
         <meta name="author" content="Ondrej Svestka | ondrejsvestka.cz">
         <meta name="keywords" content="">
 
@@ -23,22 +23,9 @@
         <meta name="keywords" content="">
 
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
-
-        <!-- styles -->
-        <link href="/css/font-awesome.css" rel="stylesheet">
-        <link href="/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/css/animate.min.css" rel="stylesheet">
-        <link href="/css/owl.carousel.css" rel="stylesheet">
-        <link href="/css/owl.theme.css" rel="stylesheet">
-        <link rel="stylesheet" href="/css/style.css" />
-        <!-- theme stylesheet -->
-        <link href="/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
-
-        <!-- your stylesheet with modifications -->
-        <link href="/css/custom.css" rel="stylesheet">
-
+        <link href="/css/style.css" rel="stylesheet" type="text/css">
         <script src="/js/respond.min.js"></script>
-        <script src="/js/star.js" ></script>
+
 
         <link rel="shortcut icon" href="favicon.png">
 
@@ -47,27 +34,25 @@
     </head>
 
     <body>
-      <!-- **************************************************************** -->
+        <!-- **************************************************************** -->
 
-      <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
+        <form id="ratingsForm">
+            <div class="stars">
+                <input type="radio" name="star" class="star-1" id="star-1" />
+                <label class="star-1" for="star-1">1</label>
+                <input type="radio" name="star" class="star-2" id="star-2" />
+                <label class="star-2" for="star-2">2</label>
+                <input type="radio" name="star" class="star-3" id="star-3" />
+                <label class="star-3" for="star-3">3</label>
+                <input type="radio" name="star" class="star-4" id="star-4" />
+                <label class="star-4" for="star-4">4</label>
+                <input type="radio" name="star" class="star-5" id="star-5" />
+                <label class="star-5" for="star-5">5</label>
+                <span></span>
+            </div>
 
-      <form id="ratingsForm">
-      	<div class="stars">
-      		<input type="radio" name="star" class="star-1" id="star-1" />
-      		<label class="star-1" for="star-1">1</label>
-      		<input type="radio" name="star" class="star-2" id="star-2" />
-      		<label class="star-2" for="star-2">2</label>
-      		<input type="radio" name="star" class="star-3" id="star-3" />
-      		<label class="star-3" for="star-3">3</label>
-      		<input type="radio" name="star" class="star-4" id="star-4" />
-      		<label class="star-4" for="star-4">4</label>
-      		<input type="radio" name="star" class="star-5" id="star-5" />
-      		<label class="star-5" for="star-5">5</label>
-      		<span></span>
-      	</div>
-
-      </form>
-      <!--  ****************************************************************************************-->
+        </form>
+        <!--  ****************************************************************************************-->
         <div id="all">
 
             <div id="content">
@@ -140,7 +125,7 @@
                             </div>
                         </div>
 
-                        
+
                         <!-- *** MENUS AND FILTERS END *** -->
 
                         <div class="banner">
@@ -174,11 +159,13 @@
                             <div class="col-sm-6">
                                 <div class="box">
                                     <h1 class="text-center">
-<?php if ($this->language == "En") {
-    echo $this->product["EnName"];
-} elseif ($this->language == "Ar") {
-    echo $this->product["ArName"];
-} ?></h1>
+                                        <?php
+                                        if ($this->language == "En") {
+                                            echo $this->product["EnName"];
+                                        } elseif ($this->language == "Ar") {
+                                            echo $this->product["ArName"];
+                                        }
+                                        ?></h1>
                                     <p class="goToDescription"><a href="#details" class="scroll-to">Scroll to product details, material & care and sizing</a>
                                     </p>
                                     <p class="price">$<?= $this->product["price"] ?></p>
@@ -229,7 +216,7 @@
                                 <?php if ($personKey == "adminID") { ?>
                                     <?php if ($this->language == "En") { ?>
                                         <li role="presentation"><a href="#statistic" aria-controls="profile" role="tab" data-toggle="tab">Statistics</a></li>
-    <?php } else if ($this->language == "Ar") { ?>
+                                    <?php } else if ($this->language == "Ar") { ?>
                                         <li role="presentation"><a href="#statistic" aria-controls="profile" role="tab" data-toggle="tab">الاحصائيات</a></li>
     <?php } ?>
 <?php } ?>
@@ -243,7 +230,7 @@
                                         <?php if ($this->language == "En") { ?>
                                             <h4>Product details</h4>
                                             <p><?= $this->product["EnDescription"] ?></p>
-<?php } else if ($this->language == "Ar") { ?>
+                                        <?php } else if ($this->language == "Ar") { ?>
                                             <h4>تفاصيل المنتج </h4>
                                             <p><?= $this->product["ArDescription"] ?></p>
 <?php } ?>
@@ -277,7 +264,7 @@
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="comment">
                                     <div class="box" id="comments">
-                                        <?php foreach ($this->comments as $value) { ?>
+                                            <?php foreach ($this->comments as $value) { ?>
                                             <div class="well well-sm">
     <?php echo $value['comment_body']; ?>
                                                 <a href=""class="btn btn-danger">Delete</a>
@@ -294,18 +281,17 @@
                                             <!-- hager -->
                                             <table class="table">
                                                 <tr>
-             <th>number of users who purchased</th>
-             <th>The amount of money gained </th>
-            </tr>
-            <?php
-           // $pro = new Application_Model_Product();
+                                                    <th>number of users who purchased</th>
+                                                    <th>The amount of money gained </th>
+                                                </tr>
+                                                <?php
+                                                // $pro = new Application_Model_Product();
 
                                                 echo "<tr>" .
                                                 "<td>" . $this->product["EnName"] . "</td>" .
-            "<td>" . $this->product['no_purchase'] . "</td>" .
-            "<td>" . $this->product['no_purchase']*$this->product['price'] . "</td>" ."</tr>";
-
-            ?>
+                                                "<td>" . $this->product['no_purchase'] . "</td>" .
+                                                "<td>" . $this->product['no_purchase'] * $this->product['price'] . "</td>" . "</tr>";
+                                                ?>
 
                                             </table>
 
@@ -411,7 +397,7 @@
 
                         </div>
 
-                        
+
 
                     </div>
                     <!-- /.col-md-9 -->
@@ -430,11 +416,12 @@
 
         <!-- *** SCRIPTS TO INCLUDE ***
      _________________________________________________________ -->
-       <script src="/js/jquery.cookie.js"></script>
-    <script src="/js/waypoints.min.js"></script>
-    <script src="/js/modernizr.js"></script>
-    <script src="/js/owl.carousel.min.js"></script>
-    <script src="/js/front.js"></script>
+        <script src="/js/star.js" ></script>
+        <script src="/js/jquery.cookie.js"></script>
+        <script src="/js/waypoints.min.js"></script>
+        <script src="/js/modernizr.js"></script>
+        <script src="/js/owl.carousel.min.js"></script>
+        <script src="/js/front.js"></script>
 
 
 
