--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -53,15 +53,15 @@
 
       <form id="ratingsForm">
       	<div class="stars">
-      		<input type="radio" name="star" class="star-1" id="star-1" />
+      		<input type="radio" name="star" class="star-1" id="<?= $this->product["productID"]?>" />
       		<label class="star-1" for="star-1">1</label>
-      		<input type="radio" name="star" class="star-2" id="star-2" />
+      		<input type="radio" name="star" class="star-2" id="<?= $this->product["productID"]?>" />
       		<label class="star-2" for="star-2">2</label>
-      		<input type="radio" name="star" class="star-3" id="star-3" />
+      		<input type="radio" name="star" class="star-3" id="<?= $this->product["productID"]?>" />
       		<label class="star-3" for="star-3">3</label>
-      		<input type="radio" name="star" class="star-4" id="star-4" />
+      		<input type="radio" name="star" class="star-4" id="<?= $this->product["productID"]?>" />
       		<label class="star-4" for="star-4">4</label>
-      		<input type="radio" name="star" class="star-5" id="star-5" />
+      		<input type="radio" name="star" class="star-5" id="<?= $this->product["productID"]?>" />
       		<label class="star-5" for="star-5">5</label>
       		<span></span>
       	</div>
