--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -60,10 +60,61 @@ $categories = new Zend_Session_Namespace('category');
 ?>
 
 <!-- *************************************************************************************************** -->
+<!--<div id="top">
+        <div class="container">
+            <div class="col-md-6 offer" data-animate="fadeInDown">
+                <a href="#" class="btn btn-success btn-sm" data-animate-hover="shake">Offer of the day</a>  <a href="#">Get flat 35% off on orders over $50!</a>
+            </div>
+            <div class="col-md-6" data-animate="fadeInDown">
+                <ul class="menu">
+                    <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
+                    </li>
+                    <li><a href="register.html">Register</a>
+                    </li>
+                    <li><a href="contact.html">Contact</a>
+                    </li>
+                    <li><a href="#">Recently viewed</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="Login">Customer login</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="customer-orders.html" method="post">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="email-modal" placeholder="email">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="password-modal" placeholder="password">
+                            </div>
+
+                            <p class="text-center">
+                                <button class="btn btn-primary"><i class="fa fa-sign-in"></i> Log in</button>
+                            </p>
+
+                        </form>
+
+                        <p class="text-center text-muted">Not registered yet?</p>
+                        <p class="text-center text-muted"><a href="register.html"><strong>Register now</strong></a>! It is easy and done in 1&nbsp;minute and gives you access to special discounts and much more!</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>-->
+
+    <!-- *** TOP BAR END *** -->
 
 <!-- *** NAVBAR ***
 _________________________________________________________ -->
-
 <div class="navbar navbar-default yamm" role="navigation" id="navbar">
     <div class="container">
         <div class="navbar-header">
@@ -128,83 +179,6 @@ _________________________________________________________ -->
                                     </div> -->
 
 
-                                </div>
-                            </div>
-                            <!-- /.yamm-content -->
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="dropdown yamm-fw">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Ladies <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <div class="yamm-content">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <h5>Clothing</h5>
-                                        <ul>
-                                            <li><a href="category.html">T-shirts</a>
-                                            </li>
-                                            <li><a href="category.html">Shirts</a>
-                                            </li>
-                                            <li><a href="category.html">Pants</a>
-                                            </li>
-                                            <li><a href="category.html">Accessories</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <h5>Shoes</h5>
-                                        <ul>
-                                            <li><a href="category.html">Trainers</a>
-                                            </li>
-                                            <li><a href="category.html">Sandals</a>
-                                            </li>
-                                            <li><a href="category.html">Hiking shoes</a>
-                                            </li>
-                                            <li><a href="category.html">Casual</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <h5>Accessories</h5>
-                                        <ul>
-                                            <li><a href="category.html">Trainers</a>
-                                            </li>
-                                            <li><a href="category.html">Sandals</a>
-                                            </li>
-                                            <li><a href="category.html">Hiking shoes</a>
-                                            </li>
-                                            <li><a href="category.html">Casual</a>
-                                            </li>
-                                            <li><a href="category.html">Hiking shoes</a>
-                                            </li>
-                                            <li><a href="category.html">Casual</a>
-                                            </li>
-                                        </ul>
-                                        <h5>Looks and trends</h5>
-                                        <ul>
-                                            <li><a href="category.html">Trainers</a>
-                                            </li>
-                                            <li><a href="category.html">Sandals</a>
-                                            </li>
-                                            <li><a href="category.html">Hiking shoes</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <div class="banner">
-                                            <a href="#">
-                                                <img src="/img/banner.jpg" class="/img img-responsive" alt="">
-                                            </a>
-                                        </div>
-                                        <div class="banner">
-                                            <a href="#">
-                                                <img src="/img/banner2.jpg" class="/img img-responsive" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <!-- /.yamm-content -->
@@ -294,145 +268,6 @@ _________________________________________________________ -->
 <!-- *** NAVBAR END *** -->
 
 <?php echo $this->layout()->content; ?>
-
-  <!-- *** FOOTER ***
-         _________________________________________________________ -->
-                <div id="footer" data-animate="fadeInUp">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-6">
-                                <h4>Pages</h4>
-
-                                <ul>
-                                    <li><a href="text.html">About us</a>
-                                    </li>
-                                    <li><a href="text.html">Terms and conditions</a>
-                                    </li>
-                                    <li><a href="faq.html">FAQ</a>
-                                    </li>
-                                    <li><a href="contact.html">Contact us</a>
-                                    </li>
-                                </ul>
-
-                                <hr>
-
-                                <h4>User section</h4>
-
-                                <ul>
-                                    <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
-                                    </li>
-                                    <li><a href="register.html">Regiter</a>
-                                    </li>
-                                </ul>
-
-                                <hr class="hidden-md hidden-lg hidden-sm">
-
-                            </div>
-                            <!-- /.col-md-3 -->
-
-                            <div class="col-md-3 col-sm-6">
-
-                                <h4>Top categories</h4>
-
-                                <h5>Men</h5>
-
-                                <ul>
-                                    <li><a href="category.html">T-shirts</a>
-                                    </li>
-                                    <li><a href="category.html">Shirts</a>
-                                    </li>
-                                    <li><a href="category.html">Accessories</a>
-                                    </li>
-                                </ul>
-
-                                <h5>Ladies</h5>
-                                <ul>
-                                    <li><a href="category.html">T-shirts</a>
-                                    </li>
-                                    <li><a href="category.html">Skirts</a>
-                                    </li>
-                                    <li><a href="category.html">Pants</a>
-                                    </li>
-                                    <li><a href="category.html">Accessories</a>
-                                    </li>
-                                </ul>
-
-                                <hr class="hidden-md hidden-lg">
-
-                            </div>
-                            <!-- /.col-md-3 -->
-
-                            <div class="col-md-3 col-sm-6">
-
-                                <h4>Where to find us</h4>
-
-                                <p><strong>Amazend Ltd.</strong>
-                                    <br>13/25 New Avenue
-                                    <br>New Heaven
-                                    <br>45Y 73J
-                                    <br>England
-                                    <br>
-                                    <strong>Great Britain</strong>
-                                </p>
-
-                                <a href="contact.html">Go to contact page</a>
-
-                                <hr class="hidden-md hidden-lg">
-
-                            </div>
-                            <!-- /.col-md-3 -->
-
-
-
-                            <div class="col-md-3 col-sm-6">
-
-                                <h4>Get the news</h4>
-
-                                <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-
-                                <form>
-                                    <div class="input-group">
-
-                                        <input type="text" class="form-control">
-
-                                        <span class="input-group-btn">
-
-                                            <button class="btn btn-default" type="button">Subscribe!</button>
-
-                                        </span>
-
-                                    </div>
-                                    <!-- /input-group -->
-                                </form>
-
-                                <hr>
-
-                                <h4>Stay in touch</h4>
-
-                                <p class="social">
-                                    <a href="#" class="facebook external" data-animate-hover="shake"><i class="fa fa-facebook"></i></a>
-                                    <a href="#" class="twitter external" data-animate-hover="shake"><i class="fa fa-twitter"></i></a>
-                                    <a href="#" class="instagram external" data-animate-hover="shake"><i class="fa fa-instagram"></i></a>
-                                    <a href="#" class="gplus external" data-animate-hover="shake"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#" class="email external" data-animate-hover="shake"><i class="fa fa-envelope"></i></a>
-                                </p>
-
-
-                            </div>
-                            <!-- /.col-md-3 -->
-
-                        </div>
-                        <!-- /.row -->
-
-                    </div>
-                    <!-- /.container -->
-                </div>
-                <!-- /#footer -->
-
-                <!-- *** FOOTER END *** -->
-
-
-
 
                 <!-- *** COPYRIGHT ***
          _________________________________________________________ -->
