--- a/application/views/scripts/customer/fblogin.phtml
+++ b/application/views/scripts/customer/fblogin.phtml
@@ -1,4 +1,1 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Customer</b> and script/action name <b>fblogin</b></p>
-</div>
+<?php echo '<a href="' . htmlspecialchars( $this->facebook_url) . '"> <img src="/img/fblogin-btn.png"></img></a>';?>
