--- a/application/views/scripts/customer/login.phtml
+++ b/application/views/scripts/customer/login.phtml
@@ -16,6 +16,10 @@ echo $this->facebookUrl;
 <!-- <a href=""><img src="img/fblogin-btn.png"></a> -->
 <?php echo '<a href="' . htmlspecialchars( $this->facebook_url) . '"> <img src="/img/fblogin-btn.png"></img></a>';?>
 
+<?php //echo '<a href="/customer/fblogin"> <img src="/img/fblogin-btn.png"></img></a>';?>
+
+<?php //echo '<a href="' . htmlspecialchars( $this->facebookUrl) . '"> <img src="/img/fblogin-btn.png"></img></a>';?>
+
 </table>
 </div>
 </div>
