--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -38,15 +38,15 @@ var_dump($personKey);
         <form id="ratingsForm">
             <div class="stars">
       		<input type="radio" name="star" class="star-1" id="<?= $this->product["productID"]?>" />
-                <label class="star-1" for="star-1">1</label>
+                <label class="star-1" for="star-1" id="<?= $this->product["productID"]?>">1</label>
       		<input type="radio" name="star" class="star-2" id="<?= $this->product["productID"]?>" />
-                <label class="star-2" for="star-2">2</label>
+                <label class="star-2" for="star-2" id="<?= $this->product["productID"]?>">2</label>
       		<input type="radio" name="star" class="star-3" id="<?= $this->product["productID"]?>" />
-                <label class="star-3" for="star-3">3</label>
+                <label class="star-3" for="star-3" id="<?= $this->product["productID"]?>">3</label>
       		<input type="radio" name="star" class="star-4" id="<?= $this->product["productID"]?>" />
-                <label class="star-4" for="star-4">4</label>
+                <label class="star-4" for="star-4" id="<?= $this->product["productID"]?>">4</label>
       		<input type="radio" name="star" class="star-5" id="<?= $this->product["productID"]?>" />
-                <label class="star-5" for="star-5">5</label>
+                <label class="star-5" for="star-5" id="<?= $this->product["productID"]?>">5</label>
                 <span></span>
             </div>
 
