--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -46,7 +46,7 @@ var_dump($personKey);
       		<input type="radio" name="star" class="star-4" id="<?= $this->product["productID"]?>" />
                 <label class="star-4" for="star-4">4</label>
       		<input type="radio" name="star" class="star-5" id="<?= $this->product["productID"]?>" />
-                <label class="star-5" for="star-5">5</label>
+                <label class="star-5" for="star-5" id="<?= $this->product["productID"]?>">5</label>
                 <span></span>
             </div>
 
