--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-body {
+/*body {
   padding: 50px;
-}
+}*/
 form .stars {
   background: url("/css/images/stars.png") repeat-x 0 0;
   width: 150px;
