--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -216,6 +216,15 @@ _________________________________________________________ -->
                 <?php else: ?>
 
                     <li><a href="/customer/logout">Logout</a></li>
+                    <?php if($personKey=="shopperID"): ?>
+                    <li class="yamm-fw"><a href="/product">My products</a>
+                </li>
+            <?php  endif; ?>
+            <?php if($personKey=="adminID"): ?>
+                    <li class="yamm-fw"><a href="/admin">DashBoard</a>
+                </li>
+            <?php  endif; ?>
+
                 <?php endif; ?>
                 <!-- Language -->
                 <li class="dropdown">
@@ -227,8 +236,7 @@ _________________________________________________________ -->
                 </li>
                 <!--aaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
 
-            <li class="yamm-fw"><a href="/product">My products</a>
-                </li>
+            
 
             </ul>
 
