--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -27,7 +27,7 @@ var_dump($personKey);
         <script src="/js/respond.min.js"></script>
 
 
-        <link rel="shortcut icon" href="favicon.png">
+        <!--<link rel="shortcut icon" href="favicon.png">-->
 
 
 
