--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
-/*body {
+/*.body {
   padding: 50px;
 }*/
 form .stars {
-  background: url("/css/images/stars.png") repeat-x 0 0;
+  background: url("images/stars.png") repeat-x 0 0;
   width: 150px;
   margin: 0 auto;
 }
@@ -65,7 +65,7 @@ form .stars span {
   top: 0;
   left: 0;
   height: 30px;
-  background: url("/css/images/stars.png") repeat-x 0 -60px;
+  background: url("images/stars.png") repeat-x 0 -60px;
   -webkit-transition: -webkit-width 0.5s;
   -moz-transition: -moz-width 0.5s;
   -ms-transition: -ms-width 0.5s;
