admin login signup

--- a/application/views/scripts/admin/login.phtml
+++ b/application/views/scripts/admin/login.phtml
@@ -2,18 +2,21 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h1><center>
-    	Login Page
-    </center></h1>
+    	Login Page 
+    	</center></h1>
   </div>
   <div class="panel-body">
 
 <?php
-/*$this->title = "login";
-$this->headTitle($this->title);*/
+
 echo $this->form ;
 ?>
 
-</table>
+
+
+
+<p><a class='btn btn-warning' href="<?php echo $this->url(array('controller'=>'admin',
+'action'=>'add'));?>">Add new Admin</a></p>
 </div>
 </div>
 </div>
