--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -214,17 +214,27 @@ _________________________________________________________ -->
                         </ul>
                     </li>
                 <?php elseif($personKey=="adminID"): ?>
-                    <li><a href="/admin/logout">Logout</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Dashboard <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li class="modified"><a href="/admin">Manage Site</a></li>
+                            <li class="modified"><a href="/admin/logout">Logout</a></li>
+
+                            <li></li>
+                        </ul>
+                    </li>
                <?php else: ?>
-                    <li><a href="/customer/logout">Logout</a></li>
-                    <?php if($personKey=="shopperID"): ?>
-                    <li class="yamm-fw"><a href="/product">My products</a>
-                </li>
-            <?php  endif; ?>
-            <?php if($personKey=="adminID"): ?>
-                    <li class="yamm-fw"><a href="/admin">DashBoard</a>
-                </li>
-            <?php  endif; ?>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Logout <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <?php if($personKey=="shopperID"): ?>
+                            <li class="modified"><a href="/product">My Products</a></li>
+                            <?php  endif; ?>
+                            <li class="modified"><a href="/customer/logout">Logout</a></li>
+
+                            <li></li>
+                        </ul>
+                    </li>
 
                 <?php endif; ?>
                 <!-- Language -->
