slider & design editing

--- a/application/views/scripts/checkout/placeorder.phtml
+++ b/application/views/scripts/checkout/placeorder.phtml
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<?php
+echo $this->cust ;
+echo $this->cart  ;
+ ?>
 <head>
 
     <meta charset="utf-8">
@@ -166,7 +169,7 @@
     <!-- /#all -->
 
 
-    
+
 
     <!-- *** SCRIPTS TO INCLUDE ***
  _________________________________________________________ -->
