--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -57,10 +57,10 @@
                             <?php foreach ($this->slider_products as $slider_product) { ?>
                                     <?php if ($count == 0) { ?>
                                     <div class="item">
-                                        <img src="/img/<?=$slider_product['photo'] ?>" alt="" class="img-responsive">
+                                        <img src="/img/<?=$slider_product['photo'] ?>" alt="" class="img-responsive"  >
                                     </div>
     <?php } else { ?>
-                                    <div class="item">
+                                    <div class="item" width="100%">
                                         <img class="img-responsive" src="/img/<?= $slider_product['photo'] ?>" alt="">
                                     </div>
                                 <?php
@@ -74,51 +74,7 @@
                     </div>
                 </div>
 
-                <!-- *** ADVANTAGES HOMEPAGE ***
-     _________________________________________________________ -->
-                <div id="advantages">
 
-                    <div class="container">
-                        <div class="same-height-row">
-                            <div class="col-sm-4">
-                                <div class="box same-height clickable">
-                                    <div class="icon"><i class="fa fa-heart"></i>
-                                    </div>
-
-                                    <h3><a href="#">We love our customers</a></h3>
-                                    <p>We are known to provide best possible service ever</p>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-4">
-                                <div class="box same-height clickable">
-                                    <div class="icon"><i class="fa fa-tags"></i>
-                                    </div>
-
-                                    <h3><a href="#">Best prices</a></h3>
-                                    <p>AmaZend is the best price ever.</p>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-4">
-                                <div class="box same-height clickable">
-                                    <div class="icon"><i class="fa fa-thumbs-up"></i>
-                                    </div>
-
-                                    <h3><a href="#">100% satisfaction guaranteed</a></h3>
-                                    <p>Free returns on everything for 3 months.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.row -->
-
-                    </div>
-                    <!-- /.container -->
-
-                </div>
-                <!-- /#advantages -->
-
-                <!-- *** ADVANTAGES END *** -->
 
                 <!-- *** HOT PRODUCT SLIDESHOW ***
      _________________________________________________________ -->
@@ -146,14 +102,14 @@
                                                 <div class="flipper">
                                                     <div class="front">
                                                         <a href="detail.html">
-                                                            <img src="/img/product2.jpg" alt="" class="img-responsive">
+                                                            <img src="/img/<?= $product['photo']?>" alt="" class="img-responsive">
                                                         </a>
                                                     </div>
-                                                    <div class="back">
+                                                    <!-- <div class="back">
                                                         <a href="detail.html">
                                                             <img src="/img/product2_2.jpg" alt="" class="img-responsive">
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                             <a href="<?= "/index/product/pid/" . $product['productID'] ?>" class="invisible">
@@ -166,7 +122,7 @@
                                                     <h3><a href="<?= "/index/product/pid/" . $product['productID'] ?>"><?= $product['ArName'] ?></a></h3>
     <?php } ?>
 
-                                                <p class="price"><del>$280</del> $143.00</p>
+                                                <p class="price"><?= $product['price'] ?></p>
                                             </div>
                                             <!-- /.text -->
 
@@ -200,43 +156,11 @@
                         <!-- /.container -->
 
                     </div>
-                    <!-- /#hot -->
-
-                    <!-- *** HOT END *** -->
-
-                    <!-- *** GET INSPIRED ***
-         _________________________________________________________ -->
-                    <div class="container" data-animate="fadeInUpBig">
-                        <div class="col-md-12">
-                            <div class="box slideshow">
-                                <h3>Get Inspired</h3>
-                                <p class="lead">Get the inspiration from our world class designers</p>
-                                <div id="get-inspired" class="owl-carousel owl-theme">
-                                    <div class="item">
-                                        <a href="#">
-                                            <img src="/img/getinspired1.jpg" alt="Get inspired" class="img-responsive">
-                                        </a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="#">
-                                            <img src="/img/getinspired2.jpg" alt="Get inspired" class="img-responsive">
-                                        </a>
-                                    </div>
-                                    <div class="item">
-                                        <a href="#">
-                                            <img src="/img/getinspired3.jpg" alt="Get inspired" class="img-responsive">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- *** GET INSPIRED END *** -->
 
                 </div>
                 <!-- /#content -->
 
-              
+
             </div>
             <!-- /#all -->
 
