--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -4,7 +4,7 @@
     $userType = new Zend_Session_Namespace('user');
 ////    $userType = new Zend_Session_Namespace('userType');
 $personKey= $userType->type ;
-var_dump($personKey);
+// var_dump($personKey);
     ?>
     <head>
 
@@ -34,26 +34,7 @@ var_dump($personKey);
     </head>
 
     <body>
-        <!-- **************************************************************** -->
-        <form id="ratingsForm">
-            <div class="stars">
-      		<input type="radio" name="star" class="star-1" id="<?= $this->product["productID"]?>" />
-                <label class="star-1" for="star-1" id="<?= $this->product["productID"]?>">1</label>
-      		<input type="radio" name="star" class="star-2" id="<?= $this->product["productID"]?>" />
-                <label class="star-2" for="star-2" id="<?= $this->product["productID"]?>">2</label>
-      		<input type="radio" name="star" class="star-3" id="<?= $this->product["productID"]?>" />
-                <label class="star-3" for="star-3" id="<?= $this->product["productID"]?>">3</label>
-      		<input type="radio" name="star" class="star-4" id="<?= $this->product["productID"]?>" />
-                <label class="star-4" for="star-4" id="<?= $this->product["productID"]?>">4</label>
-      		<input type="radio" name="star" class="star-5" id="<?= $this->product["productID"]?>" />
-                <label class="star-5" for="star-5" id="<?= $this->product["productID"]?>">5</label>
-                <span></span>
-            </div>
-
-        </form>
-        <!--  ****************************************************************************************-->
         <div id="all">
-
             <div id="content">
                 <div class="container">
 
@@ -68,70 +49,13 @@ var_dump($personKey);
 
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-1">
                         <!-- *** MENUS AND FILTERS ***
      _________________________________________________________ -->
-                        <div class="panel panel-default sidebar-menu">
-
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Categories</h3>
-                            </div>
-
-                            <div class="panel-body">
-                                <ul class="nav nav-pills nav-stacked category-menu">
-                                    <li>
-                                        <a href="category.html">Men <span class="badge pull-right">42</span></a>
-                                        <ul>
-                                            <li><a href="category.html">T-shirts</a>
-                                            </li>
-                                            <li><a href="category.html">Shirts</a>
-                                            </li>
-                                            <li><a href="category.html">Pants</a>
-                                            </li>
-                                            <li><a href="category.html">Accessories</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="active">
-                                        <a href="category.html">Ladies  <span class="badge pull-right">123</span></a>
-                                        <ul>
-                                            <li><a href="category.html">T-shirts</a>
-                                            </li>
-                                            <li><a href="category.html">Skirts</a>
-                                            </li>
-                                            <li><a href="category.html">Pants</a>
-                                            </li>
-                                            <li><a href="category.html">Accessories</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="category.html">Kids  <span class="badge pull-right">11</span></a>
-                                        <ul>
-                                            <li><a href="category.html">T-shirts</a>
-                                            </li>
-                                            <li><a href="category.html">Skirts</a>
-                                            </li>
-                                            <li><a href="category.html">Pants</a>
-                                            </li>
-                                            <li><a href="category.html">Accessories</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-
-                                </ul>
-
-                            </div>
-                        </div>
-
 
                         <!-- *** MENUS AND FILTERS END *** -->
 
-                        <div class="banner">
-                            <a href="#">
-                                <img src="/img/banner.jpg" alt="sales 2014" class="img-responsive">
-                            </a>
-                        </div>
+
                     </div>
 
                     <div class="col-md-9">
@@ -165,8 +89,26 @@ var_dump($personKey);
                                             echo $this->product["ArName"];
                                         }
                                         ?></h1>
-                                    <p class="goToDescription"><a href="#details" class="scroll-to">Scroll to product details, material & care and sizing</a>
+                                    <p class="goToDescription"><a href="#details" class="scroll-to">Scroll to product details</a>
                                     </p>
+                                    <!-- **************************************************************** -->
+                                    <form id="ratingsForm">
+                                        <div class="stars">
+                                      <input type="radio" name="star" class="star-1" id="<?= $this->product["productID"]?>" />
+                                            <label class="star-1" for="star-1" id="<?= $this->product["productID"]?>">1</label>
+                                      <input type="radio" name="star" class="star-2" id="<?= $this->product["productID"]?>" />
+                                            <label class="star-2" for="star-2" id="<?= $this->product["productID"]?>">2</label>
+                                      <input type="radio" name="star" class="star-3" id="<?= $this->product["productID"]?>" />
+                                            <label class="star-3" for="star-3" id="<?= $this->product["productID"]?>">3</label>
+                                      <input type="radio" name="star" class="star-4" id="<?= $this->product["productID"]?>" />
+                                            <label class="star-4" for="star-4" id="<?= $this->product["productID"]?>">4</label>
+                                      <input type="radio" name="star" class="star-5" id="<?= $this->product["productID"]?>" />
+                                            <label class="star-5" for="star-5" id="<?= $this->product["productID"]?>">5</label>
+                                            <span></span>
+                                        </div>
+
+                                    </form>
+                                    <!--  ****************************************************************************************-->
                                     <p class="price">$<?= $this->product["price"] ?></p>
 <?php if($personKey== "customerID"): ?>
                                     <p class="text-center buttons">
@@ -238,21 +180,6 @@ var_dump($personKey);
                                             <h4>تفاصيل المنتج </h4>
                                             <p><?= $this->product["ArDescription"] ?></p>
 <?php } ?>
-                                        <h4>Material & care</h4>
-                                        <ul>
-                                            <li>Polyester</li>
-                                            <li>Machine wash</li>
-                                        </ul>
-                                        <h4>Size & Fit</h4>
-                                        <ul>
-                                            <li>Regular fit</li>
-                                            <li>The model (height 5'8" and chest 33") is wearing a size S</li>
-                                        </ul>
-
-                                        <blockquote>
-                                            <p><em>Define style this season with Armani's new range of trendy tops, crafted with intricate details. Create a chic statement look by teaming this lace number with skinny jeans and pumps.</em>
-                                            </p>
-                                        </blockquote>
 
                                         <hr>
                                         <div class="social">
@@ -267,17 +194,36 @@ var_dump($personKey);
                                     </div>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="comment">
-                                    <div class="box" id="comments">
-                                            <?php foreach ($this->comments as $value) { ?>
-                                            <div class="well well-sm">
-    <?php echo $value['comment_body']; ?>
-                                                <a href=""class="btn btn-danger">Delete</a>
-                                            </div>
-
-<?php } echo $this->comment_form; ?>
+                            <div class="box" id="comments">
+                                    <?php foreach ($this->comments as $value) { ?>
+                                    <div class="row">
+                                    <div class="col-md-1">
+                                      <img src="/img/avatar.png" style="width :100%"/>
+                                </div>
+                                <div class="col-md-11">
+                                    <div class="well well-sm">
+                                      <div class="row">
+                                          <div class="col-md-11">
+                                              <?php echo $value['comment_body']; ?>
+                                          </div>
+                                          <div class="col-md-1">
+                                            <?php if($personKey == "adminID"): ?>
+                                                <a href="/Index/deletecomment/commentid/<?=$value['commentID']?>/pid/<?= $this->product['productID']?>" ><i class="fa fa-trash-o"> </i></a>
+                                            <?php endif ?>
+                                          </div>
+                                        </div>
+                                      </div>
 
                                     </div>
-                                </div>
+                                  </div>
+                                  <?php }
+                                  if($personKey == "customerID" || $personKey == "shopperID" || $personKey== "adminID"){
+                                      echo $this->comment_form;
+                                  }
+                                    ?>
+
+                            </div>
+                        </div>
 <?php if ($personKey == "adminID") { ?>
                                     <div role="tabpanel" class="tab-pane" id="statistic">
                                         <div class="box" id="statistics">
@@ -307,100 +253,6 @@ var_dump($personKey);
                             </div>
 
                         </div>
-
-
-                        <div class="row same-height-row">
-                            <div class="col-md-3 col-sm-6">
-                                <div class="box same-height">
-                                    <h3>You may also like these products</h3>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-sm-6">
-                                <div class="product same-height">
-                                    <div class="flip-container">
-                                        <div class="flipper">
-                                            <div class="front">
-                                                <a href="product.html">
-                                                    <img src="/img/product2.jpg" alt="" class="img-responsive">
-                                                </a>
-                                            </div>
-                                            <div class="back">
-                                                <a href="product.html">
-                                                    <img src="/img/product2_2.jpg" alt="" class="img-responsive">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a href="product.html" class="invisible">
-                                        <img src="/img/product2.jpg" alt="" class="img-responsive">
-                                    </a>
-                                    <div class="text">
-                                        <h3>Fur coat</h3>
-                                        <p class="price">$143</p>
-                                    </div>
-                                </div>
-                                <!-- /.product -->
-                            </div>
-
-                            <div class="col-md-3 col-sm-6">
-                                <div class="product same-height">
-                                    <div class="flip-container">
-                                        <div class="flipper">
-                                            <div class="front">
-                                                <a href="product.html">
-                                                    <img src="/img/product1.jpg" alt="" class="img-responsive">
-                                                </a>
-                                            </div>
-                                            <div class="back">
-                                                <a href="product.html">
-                                                    <img src="/img/product1_2.jpg" alt="" class="img-responsive">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a href="product.html" class="invisible">
-                                        <img src="/img/product1.jpg" alt="" class="img-responsive">
-                                    </a>
-                                    <div class="text">
-                                        <h3>Fur coat</h3>
-                                        <p class="price">$143</p>
-                                    </div>
-                                </div>
-                                <!-- /.product -->
-                            </div>
-
-
-                            <div class="col-md-3 col-sm-6">
-                                <div class="product same-height">
-                                    <div class="flip-container">
-                                        <div class="flipper">
-                                            <div class="front">
-                                                <a href="product.html">
-                                                    <img src="/img/product3.jpg" alt="" class="img-responsive">
-                                                </a>
-                                            </div>
-                                            <div class="back">
-                                                <a href="product.html">
-                                                    <img src="/img/product3_2.jpg" alt="" class="img-responsive">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a href="product.html" class="invisible">
-                                        <img src="/img/product3.jpg" alt="" class="img-responsive">
-                                    </a>
-                                    <div class="text">
-                                        <h3>Fur coat</h3>
-                                        <p class="price">$143</p>
-
-                                    </div>
-                                </div>
-                                <!-- /.product -->
-                            </div>
-
-                        </div>
-
 
 
                     </div>
