--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -145,7 +145,7 @@
                                             <div class="flip-container">
                                                 <div class="flipper">
                                                     <div class="front">
-                                                        <a href="detail.html">
+                                                        <a href="<?="/index/product/pid/" . $product['productID'] ?>">
                                                             <img src="/img/product2.jpg" alt="" class="img-responsive">
                                                         </a>
                                                     </div>
