--- a/application/views/scripts/customer/my-wish-list.phtml
+++ b/application/views/scripts/customer/my-wish-list.phtml
@@ -55,7 +55,7 @@
 
                                 <ul class="nav nav-pills nav-stacked">
                                     <li>
-                                        <a href="customer-orders.html"><i class="fa fa-list"></i> My orders</a>
+                                        <a href="/checkout/cart"><i class="fa fa-list"></i> My orders</a>
                                     </li>
                                     <li class="active">
                                         <a href="/customer/my-wish-list"><i class="fa fa-heart"></i> My wishlist</a>
