--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -63,7 +63,7 @@ $personKey= $userType->type ;
                         <div class="row" id="productMain">
                             <div class="col-sm-6">
                                 <div id="mainImage">
-                                    <img src="/img/detailbig1.jpg" alt="" class="img-responsive">
+                                    <img src="/img/<?= $this->product["photo"]?>" alt="" class="img-responsive">
                                 </div>
 
                                 <div class="ribbon sale">
@@ -126,18 +126,18 @@ $personKey= $userType->type ;
 
                                 <div class="row" id="thumbs">
                                     <div class="col-xs-4">
-                                        <a href="/img/detailbig1.jpg" class="thumb">
-                                            <img src="/img/detailsquare.jpg" alt="" class="img-responsive">
+                                        <a href="/img/<?= $this->product["photo"]?>" class="thumb">
+                                            <img src="/img/<?= $this->product["photo"] ?>" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="/img/detailbig2.jpg" class="thumb">
-                                            <img src="/img/detailsquare2.jpg" alt="" class="img-responsive">
+                                        <a href="/img/<?= $this->product["photo"]?>" class="thumb">
+                                            <img src="/img/<?= $this->product["photo"]?>" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="col-xs-4">
-                                        <a href="/img/detailbig3.jpg" class="thumb">
-                                            <img src="/img/detailsquare3.jpg" alt="" class="img-responsive">
+                                        <a href="/img/<?= $this->product["photo"]?>" class="thumb">
+                                            <img src="/img/<?= $this->product["photo"]?>" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
