--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -105,11 +105,11 @@
                                                             <img src="/img/<?= $product['photo']?>" alt="" class="img-responsive">
                                                         </a>
                                                     </div>
-                                                    <!-- <div class="back">
-                                                        <a href="detail.html">
-                                                            <img src="/img/product2_2.jpg" alt="" class="img-responsive">
+                                                     <div class="back">
+                                                        <a href="<?="/index/product/pid/" . $product['productID'] ?>">
+                                                            <img src="/img/<?= $product['photo']?>" alt="" class="img-responsive">
                                                         </a>
-                                                    </div> -->
+                                                    </div> 
                                                 </div>
                                             </div>
                                             <a href="<?= "/index/product/pid/" . $product['productID'] ?>" class="invisible">
